# network-configuration-parser

./: README.md  pyproject.toml  requirements.txt
network-configuration-parser/: init_script.py  ntc-parse.py
network-configuration-parser/config/: config.yaml
network-configuration-parser/inventory/: groups.yaml  hosts.yaml
