[tool.poetry]
name = "network-configuration-parser"
version = "0.1.0"
description = ""
authors = ["Adam Angell <Adam.Angell@networkingb2a.com>"]
readme = "README.md"
packages = [{include = "network-configuration-parser"}]

[tool.poetry.dependencies]
python = "^3.12"
nornir = "^3.4.1"
ntc-templates = "^5.1.0"
nornir-netmiko = "^1.0.1"
black = "^24.4.2"
setuptools = "^70.2.0"
nornir-utils = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
